[package]
name = "papervote"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"

[workspace]
members = ["common", "trustee", "verify", "voter", "wbb"]

[dependencies]
trustee = { path = "trustee" }
eyre = "0"
tokio = { version = "0.2", features = ["full"] }