[package]
name = "common"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0"
cryptid = { git = "https://github.com/eleanor-em/cryptid" }
uuid = { version = "0", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0"
