[package]
name = "common"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"

[dependencies]
ring = "0"
cryptid = { git = "https://github.com/eleanor-em/cryptid" }
uuid = { version = "0", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0"
rand = "0"
itertools = "0"
