[package]
name = "trustee"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0"
common = { "path" = "../common" }
cryptid = { git = "https://github.com/eleanor-em/cryptid" }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0", features = ["serde", "v4"] }
reqwest = { version = "0", features = ["gzip", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0"
base64 = "0"
rand = "0"
rayon = "1.3"
itertools = "0"