[package]
name = "verify"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"

[dependencies]
common = { "path" = "../common" }
cryptid = { git = "https://github.com/eleanor-em/cryptid" }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0", features = ["serde", "v4"] }
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0"
confy = "0"
base64 = "0"
clap = "2"
