[package]
name = "wbb"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
cryptid = { git = "https://github.com/eleanor-em/cryptid" }
confy = "0"
rocket = "0"
rocket_contrib = { version = "0", default-features = false, features = ["json"] }
tokio-postgres = { version = "0", features = ["with-uuid-0_8", "with-serde_json-1"] }
futures = "0"
uuid = { version = "0", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["full"] }
base64 = "0"
